--- a/goas/cl/risc0_proofs/Cargo.toml
+++ b/goas/cl/risc0_proofs/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 risc0-build = { version = "1.0" }
 
 [package.metadata.risc0]
-methods = ["input"]
+methods = ["input", "spend_zone_funds"]
 
