--- a/goas/zone/common/Cargo.toml
+++ b/goas/zone/common/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
+cl = { path = "../../cl/cl" }
+proof_statements = { path = "../../cl/proof_statements" }
