--- a/goas/zone/common/Cargo.toml
+++ b/goas/zone/common/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 cl = { path = "../../cl/cl" }
-proof_statements = { path = "../../cl/proof_statements" }
+proof_statements = { path = "../proof_statements", package = "goas_proof_statements" }
