--- a/goas/zone/Cargo.toml
+++ b/goas/zone/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "common","host", "methods"]
+members = [ "common","host", "methods", "proof_statements", "risc0_proofs"]
 
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
