--- a/goas/zone/risc0_proofs/spend_zone_funds/Cargo.toml
+++ b/goas/zone/risc0_proofs/spend_zone_funds/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
-cl = { path = "../../cl" }
-proof_statements = { path = "../../proof_statements" }
+cl = { path = "../../../cl/cl" }
+goas_proof_statements = { path = "../../proof_statements" }
+proof_statements  = { path = "../../../cl/proof_statements" }
 sha2 = "0.10"
 
 
