Add zone funds spending logic (#2)
* Add zone funds spending logic

First iteration of the zone funds death constraints

* Add zone logic support for withdrawal txs

* move zone proofs out of cl crate

* Address review comments

--- a/goas/zone/common/Cargo.toml
+++ b/goas/zone/common/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
+cl = { path = "../../cl/cl" }
+proof_statements = { path = "../proof_statements", package = "goas_proof_statements" }
