--- a/goas/zone/risc0_proofs/spend_zone_funds/Cargo.toml
+++ b/goas/zone/risc0_proofs/spend_zone_funds/Cargo.toml
@@ -1,7 +1,5 @@
-
-
 [package]
-name = "method"
+name = "spend-zone-funds"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,17 +7,15 @@ edition = "2021"
 
 [dependencies]
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
-blake2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-bincode = "1"
-common = { path = "../../common" }
 cl = { path = "../../../cl/cl" }
-proof_statements = { path = "../../proof_statements", package = "goas_proof_statements" }
+goas_proof_statements = { path = "../../proof_statements" }
+proof_statements  = { path = "../../../cl/proof_statements" }
+sha2 = "0.10"
+
 
 [patch.crates-io]
-# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
-# multiplication accelerator support for all downstream usages of the following crates.
+# add RISC Zero accelerator support for all downstream usages of the following crates.
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
-# k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"  }
 crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
 curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
