--- a/goas/cl/ledger/Cargo.toml
+++ b/goas/cl/ledger/Cargo.toml
@@ -10,4 +10,5 @@ nomos_cl_risc0_proofs = { path = "../risc0_proofs" }
 risc0-zkvm = { version = "1.0", features = ["prove", "metal"] }
 risc0-groth16 = { version = "1.0" }
 rand = "0.8.5"
+rand_core = "0.6.0"
 thiserror = "1.0.62"
