--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Proof of Leadership/circomlib"]
+[submodule "proof_of_leadership/circomlib"]
 	path = proof_of_leadership/circomlib
 	url = https://github.com/iden3/circomlib.git
