--- a/goas/zone/common/Cargo.toml
+++ b/goas/zone/common/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 serde = { version = "1", features = ["derive"] }
 cl = { path = "../../cl/cl" }
 proof_statements = { path = "../proof_statements", package = "goas_proof_statements" }
+once_cell = "1"
