--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "proof_of_leadership/circom/circomlib"]
-	path = proof_of_leadership/circom/circomlib
+[submodule "circomlib"]
+	path = circom_circuits/circomlib
 	url = https://github.com/iden3/circomlib.git
