--- a/goas/zone/executor/Cargo.toml
+++ b/goas/zone/executor/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 default-run = "host"
 
 [dependencies]
-methods = { path = "../methods" }
+goas_risc0_proofs = { path = "../risc0_proofs", package = "goas_risc0_proofs" }
 risc0-zkvm = { version = "1.0", features = ["prove", "metal"] }
 risc0-groth16 = { version = "1.0" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
