aat: scaffolding for the user ptx

--- a/goas/atomic_asset_transfer/user/Cargo.toml
+++ b/goas/atomic_asset_transfer/user/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "executor"
+name = "user"
 version = "0.1.0"
 edition = "2021"
-default-run = "executor"
 
 [dependencies]
 goas_risc0_proofs = { path = "../risc0_proofs", package = "goas_risc0_proofs" }
