--- a/goas/atomic_asset_transfer/common/Cargo.toml
+++ b/goas/atomic_asset_transfer/common/Cargo.toml
@@ -9,3 +9,4 @@ cl = { path = "../../cl/cl" }
 goas_proof_statements = { path = "../proof_statements" }
 proof_statements = { path = "../../cl/proof_statements" }
 once_cell = "1"
+sha2 = "0.10"
