--- a/goas/atomic_asset_transfer/common/Cargo.toml
+++ b/goas/atomic_asset_transfer/common/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 cl = { path = "../../cl/cl" }
-goas_proof_statements = { path = "../proof_statements" }
-proof_statements = { path = "../../cl/proof_statements" }
+ledger_proof_statements = { path = "../../cl/ledger_proof_statements" }
 once_cell = "1"
 sha2 = "0.10"
