--- a/goas/atomic_asset_transfer/executor/Cargo.toml
+++ b/goas/atomic_asset_transfer/executor/Cargo.toml
@@ -16,4 +16,8 @@ common = { path = "../common" }
 tempfile = "3"
 clap = { version = "4", features = ["derive"] }
 rand = "0.8.5"
+rand_core = "0.6.0"
 cl = { path = "../../cl/cl" }
+ledger = { path = "../../cl/ledger" }
+ledger_proof_statements = { path = "../../cl/ledger_proof_statements" }
+goas_proof_statements = { path = "../proof_statements" }
