--- a/goas/atomic_asset_transfer/risc0_proofs/spend_zone_funds/Cargo.toml
+++ b/goas/atomic_asset_transfer/risc0_proofs/spend_zone_funds/Cargo.toml
@@ -10,7 +10,7 @@ risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
 cl = { path = "../../../cl/cl" }
 goas_proof_statements = { path = "../../proof_statements" }
-proof_statements  = { path = "../../../cl/proof_statements" }
+ledger_proof_statements  = { path = "../../../cl/ledger_proof_statements" }
 sha2 = "0.10"
 
 
