--- a/goas/atomic_asset_transfer/risc0_proofs/zone_state/Cargo.toml
+++ b/goas/atomic_asset_transfer/risc0_proofs/zone_state/Cargo.toml
@@ -15,7 +15,7 @@ bincode = "1"
 common = { path = "../../common" }
 cl = { path = "../../../cl/cl" }
 goas_proof_statements = { path = "../../proof_statements" }
-proof_statements = { path = "../../../cl/proof_statements" }
+ledger_proof_statements = { path = "../../../cl/ledger_proof_statements" }
 sha2 = "0.10"
 
 [patch.crates-io]
