--- a/goas/cl/Cargo.toml
+++ b/goas/cl/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "cl", "ledger", "proof_statements", "risc0_proofs"]
+members = [ "cl", "ledger", "ledger_proof_statements", "risc0_proofs"]
 
 # Always optimize; building and running the risc0_proofs takes much longer without optimization.
 [profile.dev]
