--- a/goas/cl/ledger/Cargo.toml
+++ b/goas/cl/ledger/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 cl = { path = "../cl" }
-proof_statements = { path = "../proof_statements" }
+ledger_proof_statements = { path = "../ledger_proof_statements" }
 nomos_cl_risc0_proofs = { path = "../risc0_proofs" }
 risc0-zkvm = { version = "1.0", features = ["prove", "metal"] }
 risc0-groth16 = { version = "1.0" }
