--- a/goas/cl/risc0_proofs/input/Cargo.toml
+++ b/goas/cl/risc0_proofs/input/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
 cl = { path = "../../cl" }
-proof_statements = { path = "../../proof_statements" }
+ledger_proof_statements = { path = "../../ledger_proof_statements" }
 
 
 [patch.crates-io]
