--- a/goas/atomic_asset_transfer/proof_statements/Cargo.toml
+++ b/goas/atomic_asset_transfer/proof_statements/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+common = { path = "../common" }
 cl = { path = "../../cl/cl" }
-proof_statements = { path = "../../cl/proof_statements" }
 serde = { version = "1.0", features = ["derive"] }
