--- a/goas/atomic_asset_transfer/proof_statements/Cargo.toml
+++ b/goas/atomic_asset_transfer/proof_statements/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 common = { path = "../common" }
 cl = { path = "../../cl/cl" }
+ledger_proof_statements = { path = "../../cl/ledger_proof_statements" }
 serde = { version = "1.0", features = ["derive"] }
+sha2 = "0.10"
