--- a/goas/atomic_asset_transfer/risc0_proofs/Cargo.toml
+++ b/goas/atomic_asset_transfer/risc0_proofs/Cargo.toml
@@ -7,5 +7,4 @@ edition = "2021"
 risc0-build = { version = "1.0" }
 
 [package.metadata.risc0]
-methods = ["spend_zone_funds", "zone_state"]
-
+methods = ["spend_zone_funds", "zone_state", "user_atomic_transfer"]
