--- a/goas/cl/cl/Cargo.toml
+++ b/goas/cl/cl/Cargo.toml
@@ -10,7 +10,10 @@ serde = {version="1.0", features = ["derive"]}
 group = "0.13.0"
 rand = "0.8.5"
 rand_core = "0.6.0"
-lazy_static = "1.4.0"
 hex = "0.4.3"
 curve25519-dalek = {version = "4.1", features = ["serde", "digest", "rand_core"]}
 sha2 = "0.10"
+once_cell = "1.8.0"
+
+[patch.crates-io]
+curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
