--- a/emmarin/cl/Cargo.toml
+++ b/emmarin/cl/Cargo.toml
@@ -1,6 +1,14 @@
 [workspace]
 resolver = "2"
-members = [ "cl", "ledger", "ledger_proof_statements", "risc0_proofs", "ledger_validity_proof"]
+members = [
+    "cl",
+    "ledger",
+    "ledger_proof_statements",
+    "risc0_proofs",
+    "bundle_risc0_proof",
+    "ptx_risc0_proof",
+    "ledger_validity_proof"
+]
 
 # Always optimize; building and running the risc0_proofs takes much longer without optimization.
 [profile.dev]
