--- a/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
+++ b/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "balance"
+name = "bundle"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,6 +10,7 @@ risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
 cl = { path = "../../cl" }
 ledger_proof_statements = { path = "../../ledger_proof_statements" }
+nomos_cl_ptx_risc0_proof = { path = "../../ptx_risc0_proof" }
 
 
 [patch.crates-io]
