--- a/emmarin/cl/cl/Cargo.toml
+++ b/emmarin/cl/cl/Cargo.toml
@@ -12,5 +12,6 @@ rand = "0.8.5"
 rand_core = "0.6.0"
 hex = "0.4.3"
 curve25519-dalek = {version = "4.1", features = ["serde", "digest", "rand_core"]}
-sha2 = "0.10"
 lazy_static = "1.5.0"
+risc0-zkvm = "1.2"
+sha2 = "0.10"
