--- a/emmarin/cl/ledger_proof_statements/Cargo.toml
+++ b/emmarin/cl/ledger_proof_statements/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 cl = { path = "../cl" }
 serde = { version = "1.0", features = ["derive"] }
-sha2 = "0.10"
+risc0-zkvm = "1.2"
