--- a/emmarin/cl/cl/Cargo.toml
+++ b/emmarin/cl/cl/Cargo.toml
@@ -16,3 +16,8 @@ sha2 = "0.10"
 lazy_static = "1.5.0"
 risc0-zkvm = "1.2"
 itertools = "0.14"
+
+
+[dev-dependencies]
+proptest = "1.2.0"
+proptest-macro = "0.1"
