--- a/emmarin/cl/risc0_proofs/spending_nop/Cargo.toml
+++ b/emmarin/cl/risc0_proofs/spending_nop/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bundle"
+name = "spending_nop"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,7 +10,6 @@ risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
 cl = { path = "../../cl" }
 ledger_proof_statements = { path = "../../ledger_proof_statements" }
-nomos_cl_tx_risc0_proof = { path = "../../tx_risc0_proof" }
 
 
 [patch.crates-io]
