--- a/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
+++ b/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
@@ -10,7 +10,7 @@ risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
 cl = { path = "../../cl" }
 ledger_proof_statements = { path = "../../ledger_proof_statements" }
-nomos_cl_ptx_risc0_proof = { path = "../../ptx_risc0_proof" }
+nomos_cl_tx_risc0_proof = { path = "../../tx_risc0_proof" }
 
 
 [patch.crates-io]
