--- a/emmarin/cl/risc0_proofs/Cargo.toml
+++ b/emmarin/cl/risc0_proofs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nomos_cl_risc0_proofs"
+name = "nomos_mantle_risc0_proofs"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,5 +7,5 @@ edition = "2021"
 risc0-build = { version = "1.0" }
 
 [package.metadata.risc0]
-methods = ["constraint_nop", "stf_nop"]
+methods = ["stf_nop"]
 
