--- a/emmarin/apps/swapvm/stf/Cargo.toml
+++ b/emmarin/apps/swapvm/stf/Cargo.toml
@@ -2,6 +2,9 @@
 resolver = "2"
 members = ["host", "methods"]
 
+[dependencies]
+app = { path = "../app" }
+
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
 opt-level = 3
