--- a/emmarin/apps/swapvm/app/Cargo.toml
+++ b/emmarin/apps/swapvm/app/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 cl = { path = "../../../cl/cl" }
 risc0-zkvm = "1.2"
+serde = { version = "1.0", features = ["derive"] }
