--- a/emmarin/apps/swapvm/stf/host/Cargo.toml
+++ b/emmarin/apps/swapvm/stf/host/Cargo.toml
@@ -8,3 +8,6 @@ methods = { path = "../methods" }
 risc0-zkvm = { version = "1.2.0" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
+ledger_proof_statements = { path = "../../../../cl/ledger_proof_statements" }
+app = { path = "../../app" }
+cl = { path = "../../../../cl/cl" }
