--- a/emmarin/apps/swapvm/stf/methods/Cargo.toml
+++ b/emmarin/apps/swapvm/stf/methods/Cargo.toml
@@ -3,6 +3,9 @@ name = "methods"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+app = { path = "../../app" }
+
 [build-dependencies]
 risc0-build = { version = "1.2.0" }
 
