introduce risc0_images and risc0_images_police

--- a/emmarin/cl/Cargo.toml
+++ b/emmarin/cl/Cargo.toml
@@ -8,6 +8,8 @@ members = [
     "bundle_risc0_proof",
     "tx_risc0_proof",
     "ledger_validity_proof"
+    "risc0_images",
+    "risc0_images_police",
 ]
 
 # Always optimize; building and running the risc0_proofs takes much longer without optimization.
