--- a/emmarin/cl/ledger/Cargo.toml
+++ b/emmarin/cl/ledger/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 cl = { path = "../cl" }
 ledger_proof_statements = { path = "../ledger_proof_statements" }
 nomos_mantle_risc0_proofs = { path = "../risc0_proofs" }
-nomos_cl_bundle_risc0_proof = { path = "../bundle_risc0_proof" }
-nomos_cl_tx_risc0_proof = { path = "../tx_risc0_proof" }
+nomos_mantle_bundle_risc0_proof = { path = "../bundle_risc0_proof" }
+nomos_mantle_tx_risc0_proof = { path = "../tx_risc0_proof" }
 ledger_validity_proof = { path = "../ledger_validity_proof" }
 risc0-zkvm = { version = "1.0", features = ["prove", "metal"] }
 risc0-groth16 = { version = "1.0" }
