--- a/emmarin/cl/Cargo.toml
+++ b/emmarin/cl/Cargo.toml
@@ -7,7 +7,9 @@ members = [
     "risc0_proofs",
     "bundle_risc0_proof",
     "tx_risc0_proof",
-    "ledger_validity_proof"
+    "ledger_validity_proof",
+    "risc0_images",
+    "risc0_images_police",
 ]
 
 # Always optimize; building and running the risc0_proofs takes much longer without optimization.
