--- a/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
+++ b/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2021"
 
 [dependencies]
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
-serde = { version = "1.0", features = ["derive"] }
 cl = { path = "../../cl" }
-ledger_proof_statements = { path = "../../ledger_proof_statements" }
-risc0_images = { path = "../../risc0_images" }
+risc0_images = { path = "../../risc0_images", features=["nomos_mantle_tx_risc0_proof"] }
+hex = "0.4"
 
 
 [patch.crates-io]
