--- a/emmarin/cl/ledger_validity_proof/ledger/Cargo.toml
+++ b/emmarin/cl/ledger_validity_proof/ledger/Cargo.toml
@@ -10,7 +10,8 @@ risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
 cl = { path = "../../cl" }
 ledger_proof_statements = { path = "../../ledger_proof_statements" }
-risc0_images = { path = "../../risc0_images" }
+risc0_images = { path = "../../risc0_images", features = ["nomos_mantle_bundle_risc0_proof"] }
+hex = "0.4"
 
 [patch.crates-io]
 # add RISC Zero accelerator support for all downstream usages of the following crates.
