--- a/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
+++ b/emmarin/cl/bundle_risc0_proof/bundle/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 cl = { path = "../../cl" }
-risc0_images = { path = "../../risc0_images", features=["nomos_mantle_tx_risc0_proof"] }
+risc0_images = { path = "../../risc0_images" }
 hex = "0.4"
 
 
