--- a/emmarin/cl/ledger_risc0_proof/Cargo.toml
+++ b/emmarin/cl/ledger_risc0_proof/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "tx"
+name = "ledger_risc0_proof"
 version = "0.1.0"
 edition = "2021"
-
-[workspace]
 
 [dependencies]
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
 serde = { version = "1.0", features = ["derive"] }
-cl = { path = "../../cl" }
-ledger_proof_statements = { path = "../../ledger_proof_statements" }
-
+cl = { path = "../cl" }
+ledger_proof_statements = { path = "../ledger_proof_statements" }
+risc0_images = { path = "../risc0_images" }
+hex = "0.4"
 
 [patch.crates-io]
 # add RISC Zero accelerator support for all downstream usages of the following crates.
