--- a/emmarin/apps/swapvm/stf/methods/guest/Cargo.toml
+++ b/emmarin/apps/swapvm/stf/methods/guest/Cargo.toml
@@ -10,4 +10,4 @@ risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
 app = { path = "../../../app" }
 ledger_proof_statements = { path = "../../../../../cl/ledger_proof_statements" }
 cl = { path = "../../../../../cl/cl" }
-ledger_validity_proof = { path = "../../../../../cl/ledger_validity_proof" }
+ledger_risc0_proof = { path = "../../../../../cl/ledger_risc0_proof" }
