--- a/emmarin/cl/cl/Cargo.toml
+++ b/emmarin/cl/cl/Cargo.toml
@@ -9,6 +9,7 @@ rand_core = "0.6.0"
 hex = "0.4.3"
 risc0-zkvm = "1.2"
 itertools = "0.14"
+bincode = { version = "2", features = ["serde"] }
 
 [dev-dependencies]
 rand = "0.8.5"
