--- a/sz-poc-offsite-2025/evm/sequencer-node/Cargo.toml
+++ b/sz-poc-offsite-2025/evm/sequencer-node/Cargo.toml
@@ -3,11 +3,8 @@ name = "evm-sequencer-node"
 edition = { workspace = true }
 
 [dependencies]
-evm-sequencer-mempool = { workspace = true }
-
-clap = { workspace = true }
-futures-util = { workspace = true }
-jsonrpsee = { workspace = true }
+eyre = { workspace = true }
+futures = { workspace = true }
 reth = { workspace = true }
-reth-cli-commands = { workspace = true }
-reth-node-ethereum = { workspace = true }
+reth-ethereum = { workspace = true, features = ["full"] }
+reth-tracing = { workspace = true }
