--- a/sz-poc-offsite-2025/evm/sequencer-node/Cargo.toml
+++ b/sz-poc-offsite-2025/evm/sequencer-node/Cargo.toml
@@ -3,8 +3,12 @@ name = "evm-sequencer-node"
 edition = { workspace = true }
 
 [dependencies]
+
+evm-aggregator = { workspace = true }
+
 eyre = { workspace = true }
 futures = { workspace = true }
 reth = { workspace = true }
 reth-ethereum = { workspace = true, features = ["full"] }
+reth-ethereum-primitives = { workspace = true }
 reth-tracing = { workspace = true }
