--- a/sz-poc-offsite-2025/Cargo.toml
+++ b/sz-poc-offsite-2025/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["evm/aggregator", "evm/sequencer-node"]
+members = ["evm/processor", "evm/sequencer-node"]
 resolver = "3"
 
 [workspace.package]
@@ -7,7 +7,7 @@ edition = "2024"
 
 [workspace.dependencies]
 # Internal
-evm-aggregator = { path = "evm/aggregator" }
+evm-processor = { path = "evm/processor" }
 evm-sequencer-node = { path = "evm/sequencer-node" }
 
 # External
