--- a/sz-poc-offsite-2025/evm/sequencer-node/Cargo.toml
+++ b/sz-poc-offsite-2025/evm/sequencer-node/Cargo.toml
@@ -4,7 +4,7 @@ edition = { workspace = true }
 
 [dependencies]
 
-evm-aggregator = { workspace = true }
+evm-processor = { workspace = true }
 
 eyre = { workspace = true }
 futures = { workspace = true }
@@ -12,3 +12,4 @@ reth = { workspace = true }
 reth-ethereum = { workspace = true, features = ["full"] }
 reth-ethereum-primitives = { workspace = true }
 reth-tracing = { workspace = true }
+url = { version = "2" }
