--- a/sz-poc-offsite-2025/Cargo.toml
+++ b/sz-poc-offsite-2025/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["evm/processor", "evm/sequencer-node"]
+members = ["evm/processor", "evm/sequencer-node", "evm/prover"]
 resolver = "3"
 
 [workspace.package]
@@ -9,6 +9,7 @@ edition = "2024"
 # Internal
 evm-processor = { path = "evm/processor" }
 evm-sequencer-node = { path = "evm/sequencer-node" }
+evm-prover = { path = "evm/prover" }
 
 # External
 eyre = { version = "0.6" }
