--- a/sz-poc-offsite-2025/evm/prover/Cargo.toml
+++ b/sz-poc-offsite-2025/evm/prover/Cargo.toml
@@ -4,3 +4,8 @@ edition = { workspace = true }
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
