--- a/sz-poc-offsite-2025/Cargo.toml
+++ b/sz-poc-offsite-2025/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
-members = ["evm/processor", "evm/sequencer-node", "evm/prover"]
+members = [
+    "evm/processor",
+    "evm/sequencer-node",
+    "evm/prover",
+    "evm/proof-checker",
+]
 resolver = "3"
 
 [workspace.package]
@@ -10,6 +15,7 @@ edition = "2024"
 evm-processor = { path = "evm/processor" }
 evm-sequencer-node = { path = "evm/sequencer-node" }
 evm-prover = { path = "evm/prover" }
+evm-proof-checker = { path = "evm/proof-checker" }
 
 # External
 eyre = { version = "0.6" }
