--- a/sz-poc-offsite-2025/evm/lightnode/Cargo.toml
+++ b/sz-poc-offsite-2025/evm/lightnode/Cargo.toml
@@ -15,3 +15,4 @@ crypto-bigint = { version = "0.5.5", features = ["serde"] }
 risc0-zkvm = { version = "2" }
 indexmap = { version = "1.9.3" }
 url = { version = "2" }
+hex = { version = "0.4" }
