--- a/sz-poc-offsite-2025/evm/prover/Cargo.toml
+++ b/sz-poc-offsite-2025/evm/prover/Cargo.toml
@@ -3,9 +3,11 @@ name = "evm-prover"
 edition = { workspace = true }
 
 [dependencies]
+axum = "0.8.3"
 clap = { version = "4.5", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.44.2", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
