--- a/sz-poc-offsite-2025/evm/lightnode/Cargo.toml
+++ b/sz-poc-offsite-2025/evm/lightnode/Cargo.toml
@@ -18,3 +18,4 @@ url = { version = "2" }
 hex = { version = "0.4" }
 futures = { version = "0.3" }
 kzgrs-backend = { git = "https://github.com/logos-co/nomos", branch = "master" }
+tempfile = "3.19.1"
