--- a/sz-poc-offsite-2025/uniswap/nomiswap/package.json
+++ b/sz-poc-offsite-2025/uniswap/nomiswap/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "deploy": "gh-pages -d build",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start --host=0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
