--- a/mistral/lightnode/Cargo.toml
+++ b/mistral/lightnode/Cargo.toml
@@ -19,3 +19,10 @@ hex = { version = "0.4" }
 futures = { version = "0.3" }
 kzgrs-backend = { git = "https://github.com/logos-co/nomos", branch = "master" }
 tempfile = "3.19.1"
+alloy         = { version = "0.13", features = ["full"] }
+lru = { version = "0.14" }
+nomos-core = { git = "https://github.com/logos-co/nomos", branch = "master" }
+reth.workspace = true
+evm-processor = { path = "../processor" }
+anyhow = "1.0.98"
+tokio-stream = "0.1.17"
