--- a/mistral/uniswap/nomiswap/public/manifest.json
+++ b/mistral/uniswap/nomiswap/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nomiswap",
-  "name": "Nomiswap",
+  "short_name": "Nomoswap",
+  "name": "Nomoswap",
   "icons": [
     {
       "src": "favicon.ico",
