Add OSX building step.

--- a/.github/resources/Makefile.osx
+++ b/.github/resources/Makefile.osx
@@ -1,17 +1,17 @@
 CC = g++
-CFLAGS = -std=c++11 -O3 -I. -I/include -Duint="unsigned int"
-LDFLAGS = -L/lib -lgmp -lmman
+CFLAGS = -std=c++11 -O3 -I. -I/opt/homebrew/include -include gmp_patch.osx.hpp
+LDFLAGS = -L/opt/homebrew/lib -lgmp
 
 DEPS_HPP = circom.hpp calcwit.hpp fr.hpp pol.cpp
 DEPS_O = main.o calcwit.o fr.o pol.o
 
-all: pol.exe
+all: pol
 
 %.o: %.cpp $(DEPS_HPP)
 	$(CC) -Wno-address-of-packed-member -c $< $(CFLAGS) -o $@
 
-pol.exe: $(DEPS_O)
-	$(CC) -o pol.exe $(DEPS_O) $(LDFLAGS)
+pol: $(DEPS_O)
+	$(CC) -o pol $(DEPS_O) $(LDFLAGS)
 
 clean:
-	rm -f *.o pol.exe
+	rm -f *.o pol
