--- a/.github/workflows/compile-circuit.yml
+++ b/.github/workflows/compile-circuit.yml
@@ -185,8 +185,8 @@ jobs:
           name: pol-windows-x86_64.tar.gz
           path: repo/circom_circuits/Mantle/pol_cpp/pol-windows-x86_64.tar.gz
 
-  build-osx-native:
-    name: Build OSX Binary (Native)
+  build-macos-native:
+    name: Build MacOS Binary (Native)
     runs-on: macos-latest
     needs:
       - setup
@@ -226,13 +226,13 @@ jobs:
       - name: Dependencies - Install [nlohmann/json]
         run: brew install nlohmann-json
 
-      - name: Replace pol Makefile # TODO: Make a fork generate the appropriate OSX Makefile
+      - name: Replace pol Makefile # TODO: Make a fork generate the appropriate MacOS Makefile
         working-directory: repo
-        run: cp .github/resources/Makefile.osx circom_circuits/Mantle/pol_cpp/Makefile
+        run: cp .github/resources/Makefile.macos circom_circuits/Mantle/pol_cpp/Makefile
 
-      - name: Patch OSX GMP
+      - name: Patch MacOS GMP
         working-directory: repo
-        run: cp .github/resources/gmp_patch.osx.hpp circom_circuits/Mantle/pol_cpp/gmp_patch.osx.hpp
+        run: cp .github/resources/gmp_patch.macos.hpp circom_circuits/Mantle/pol_cpp/gmp_patch.macos.hpp
 
       - name: Compile Circuit
         working-directory: repo/circom_circuits/Mantle/pol_cpp
@@ -255,7 +255,7 @@ jobs:
       - setup
       - build-linux-native
       - build-windows-native
-      - build-osx-native
+      - build-macos-native
     env:
       VERSION: ${{ needs.setup.outputs.version }}
     outputs:
